--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 .container {background-color: white;
-  text-align: center;}
 margin: 0 auto;}
-h1 {color: green;
+h1 {color: grey;
   font-family: Arial;
   text-align: center;}
 
