--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container {background-color: white;
-margin: 0 auto;}
-h1 {color: grey;
-  font-family: Arial;
+text-align: center;
+font-family: Arial}
+h1 {color: grey;  
   text-align: center;}
 
 
