--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .container {background-color: white;
 text-align: center;
-font-family: Arial}
+font-family: Arial;
+margin: 0 auto;}
 h1 {color: grey;  
   text-align: center;}
 
